--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,3 @@
-/* || basic set up + sizing for containers */
 
 html, body {
   margin: 0;
@@ -43,11 +42,6 @@ h3 {
   font-size: 2rem;
   text-align: center;
 }
-/* || bottom toolbar styling  */
-
-
-/* || new item form styling */
-
 
 .form-box {
   background: #FFFFFF;
@@ -57,36 +51,35 @@ h3 {
   box-shadow: 2px 2px 5px rgba(0,0,0,0.7);
 }
 
-form div {
+.task-form div {
   text-align: center;
   margin-bottom: 1rem;
 }
 
-form .size-width {
+.task-form .size-width {
   margin: 1rem auto 2rem;
   width: 100%;
   font-size: 30px;
   text-align: center;
 }
 
-form .place-width {
+.task-form .place-width {
   width: 50%;
   float: left;
 }
 
-form .third-width {
+.task-form .third-width {
   text-align: center;
   font-size: 2rem;
 }
 
-
-form div label {
+.task-form div label {
   width: 10rem;
   font-size: 1.5rem;
   line-height: 1.5;
 }
 
-form .size-width input {
+.task-form .size-width input {
   width: 10rem;
   font-size: 25px;
   text-align: right;
@@ -102,14 +95,31 @@ form .size-width input {
 }
 
 
-form .place-width input {
+.task-form .place-width input {
   width: 8.75rem;
 }
 
-form #compute {
+.task-form #compute {
   font-size: 1.5rem;
 }
 
+
+#show_others {
+  border-top: 1px solid #008080;
+  border-bottom: 1px solid #008080;
+  font-size: 1.4rem;
+}
+
+#back_index {  
+  float: left;
+  font-size: 30px;
+}
+
+#tell_user {
+  font-size: 15px;
+}
+
+/**********  image  **********/
 .img0 {
   opacity: 0.3;
 }
@@ -140,23 +150,5 @@ form #compute {
 
 .img3.alpha { 
   opacity: 1.0;
-}
-
-
-
-#show_others {
-  border-top: 1px solid #008080;
-  border-bottom: 1px solid #008080;
-  font-size: 1.4rem;
-}
-
-#back_index {  
-  float: left;
-  font-size: 30px;
-  
-}
-
-#tell_user {
-  font-size: 15px;
 }
 
